// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rockets.js: component test Rockets.js: should render cancel & book rocket buttons WITHOUT reserved value 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mt-5 container-fluid"
      >
        <div
          class="g-1 mb-3 row"
        >
          <div
            class="col-2 col"
          >
            <img
              class="img-thumbnail border-0"
              src="image_url"
            />
          </div>
          <div
            class="col-10 col"
          >
            <div
              class="card-body"
            >
              <div
                class="fw-bold card-title h5"
              >
                Falcon 1
              </div>
              <p
                class="card-text"
              >
                Lorem ipsum onum
              </p>
              <button
                class="btn btn-primary"
                id="1"
                type="button"
              >
                Reserve
              </button>
            </div>
          </div>
        </div>
        <div
          class="g-1 mb-3 row"
        >
          <div
            class="col-2 col"
          >
            <img
              class="img-thumbnail border-0"
              src="image_url"
            />
          </div>
          <div
            class="col-10 col"
          >
            <div
              class="card-body"
            >
              <div
                class="fw-bold card-title h5"
              >
                Falcon 9
              </div>
              <p
                class="card-text"
              >
                Lorem ipsum onum
              </p>
              <button
                class="btn btn-primary"
                id="2"
                type="button"
              >
                Reserve
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mt-5 container-fluid"
    >
      <div
        class="g-1 mb-3 row"
      >
        <div
          class="col-2 col"
        >
          <img
            class="img-thumbnail border-0"
            src="image_url"
          />
        </div>
        <div
          class="col-10 col"
        >
          <div
            class="card-body"
          >
            <div
              class="fw-bold card-title h5"
            >
              Falcon 1
            </div>
            <p
              class="card-text"
            >
              Lorem ipsum onum
            </p>
            <button
              class="btn btn-primary"
              id="1"
              type="button"
            >
              Reserve
            </button>
          </div>
        </div>
      </div>
      <div
        class="g-1 mb-3 row"
      >
        <div
          class="col-2 col"
        >
          <img
            class="img-thumbnail border-0"
            src="image_url"
          />
        </div>
        <div
          class="col-10 col"
        >
          <div
            class="card-body"
          >
            <div
              class="fw-bold card-title h5"
            >
              Falcon 9
            </div>
            <p
              class="card-text"
            >
              Lorem ipsum onum
            </p>
            <button
              class="btn btn-primary"
              id="2"
              type="button"
            >
              Reserve
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Rockets.js: component test Rockets.js: should render cancel & book rocket buttons according to reserved value 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mt-5 container-fluid"
      >
        <div
          class="g-1 mb-3 row"
        >
          <div
            class="col-2 col"
          >
            <img
              class="img-thumbnail border-0"
              src="image_url"
            />
          </div>
          <div
            class="col-10 col"
          >
            <div
              class="card-body"
            >
              <div
                class="fw-bold card-title h5"
              >
                Falcon 1
              </div>
              <p
                class="card-text"
              >
                <span
                  class="me-2 badge bg-info"
                >
                  Reserved
                </span>
                Lorem ipsum onum
              </p>
              <button
                class="btn btn-outline-secondary"
                id="1"
                type="button"
              >
                Cancel
              </button>
            </div>
          </div>
        </div>
        <div
          class="g-1 mb-3 row"
        >
          <div
            class="col-2 col"
          >
            <img
              class="img-thumbnail border-0"
              src="image_url"
            />
          </div>
          <div
            class="col-10 col"
          >
            <div
              class="card-body"
            >
              <div
                class="fw-bold card-title h5"
              >
                Falcon 9
              </div>
              <p
                class="card-text"
              >
                Lorem ipsum onum
              </p>
              <button
                class="btn btn-primary"
                id="2"
                type="button"
              >
                Reserve
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mt-5 container-fluid"
    >
      <div
        class="g-1 mb-3 row"
      >
        <div
          class="col-2 col"
        >
          <img
            class="img-thumbnail border-0"
            src="image_url"
          />
        </div>
        <div
          class="col-10 col"
        >
          <div
            class="card-body"
          >
            <div
              class="fw-bold card-title h5"
            >
              Falcon 1
            </div>
            <p
              class="card-text"
            >
              <span
                class="me-2 badge bg-info"
              >
                Reserved
              </span>
              Lorem ipsum onum
            </p>
            <button
              class="btn btn-outline-secondary"
              id="1"
              type="button"
            >
              Cancel
            </button>
          </div>
        </div>
      </div>
      <div
        class="g-1 mb-3 row"
      >
        <div
          class="col-2 col"
        >
          <img
            class="img-thumbnail border-0"
            src="image_url"
          />
        </div>
        <div
          class="col-10 col"
        >
          <div
            class="card-body"
          >
            <div
              class="fw-bold card-title h5"
            >
              Falcon 9
            </div>
            <p
              class="card-text"
            >
              Lorem ipsum onum
            </p>
            <button
              class="btn btn-primary"
              id="2"
              type="button"
            >
              Reserve
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Rockets.js: component test Rockets.js: should render cancel & book rocket buttons according to reserved value 2`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mt-5 container-fluid"
      >
        <div
          class="g-1 mb-3 row"
        >
          <div
            class="col-2 col"
          >
            <img
              class="img-thumbnail border-0"
              src="image_url"
            />
          </div>
          <div
            class="col-10 col"
          >
            <div
              class="card-body"
            >
              <div
                class="fw-bold card-title h5"
              >
                Falcon 1
              </div>
              <p
                class="card-text"
              >
                Lorem ipsum onum
              </p>
              <button
                class="btn btn-primary"
                id="1"
                type="button"
              >
                Reserve
              </button>
            </div>
          </div>
        </div>
        <div
          class="g-1 mb-3 row"
        >
          <div
            class="col-2 col"
          >
            <img
              class="img-thumbnail border-0"
              src="image_url"
            />
          </div>
          <div
            class="col-10 col"
          >
            <div
              class="card-body"
            >
              <div
                class="fw-bold card-title h5"
              >
                Falcon 9
              </div>
              <p
                class="card-text"
              >
                Lorem ipsum onum
              </p>
              <button
                class="btn btn-primary"
                id="2"
                type="button"
              >
                Reserve
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mt-5 container-fluid"
    >
      <div
        class="g-1 mb-3 row"
      >
        <div
          class="col-2 col"
        >
          <img
            class="img-thumbnail border-0"
            src="image_url"
          />
        </div>
        <div
          class="col-10 col"
        >
          <div
            class="card-body"
          >
            <div
              class="fw-bold card-title h5"
            >
              Falcon 1
            </div>
            <p
              class="card-text"
            >
              Lorem ipsum onum
            </p>
            <button
              class="btn btn-primary"
              id="1"
              type="button"
            >
              Reserve
            </button>
          </div>
        </div>
      </div>
      <div
        class="g-1 mb-3 row"
      >
        <div
          class="col-2 col"
        >
          <img
            class="img-thumbnail border-0"
            src="image_url"
          />
        </div>
        <div
          class="col-10 col"
        >
          <div
            class="card-body"
          >
            <div
              class="fw-bold card-title h5"
            >
              Falcon 9
            </div>
            <p
              class="card-text"
            >
              Lorem ipsum onum
            </p>
            <button
              class="btn btn-primary"
              id="2"
              type="button"
            >
              Reserve
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Rockets.js: component test Rockets.js: should render cancel & book rocket buttons without any reserved value 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mt-5 container-fluid"
      >
        <div
          class="g-1 mb-3 row"
        >
          <div
            class="col-2 col"
          >
            <img
              class="img-thumbnail border-0"
              src="image_url"
            />
          </div>
          <div
            class="col-10 col"
          >
            <div
              class="card-body"
            >
              <div
                class="fw-bold card-title h5"
              >
                Falcon 1
              </div>
              <p
                class="card-text"
              >
                Lorem ipsum onum
              </p>
              <button
                class="btn btn-primary"
                id="1"
                type="button"
              >
                Reserve
              </button>
            </div>
          </div>
        </div>
        <div
          class="g-1 mb-3 row"
        >
          <div
            class="col-2 col"
          >
            <img
              class="img-thumbnail border-0"
              src="image_url"
            />
          </div>
          <div
            class="col-10 col"
          >
            <div
              class="card-body"
            >
              <div
                class="fw-bold card-title h5"
              >
                Falcon 9
              </div>
              <p
                class="card-text"
              >
                Lorem ipsum onum
              </p>
              <button
                class="btn btn-primary"
                id="2"
                type="button"
              >
                Reserve
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mt-5 container-fluid"
    >
      <div
        class="g-1 mb-3 row"
      >
        <div
          class="col-2 col"
        >
          <img
            class="img-thumbnail border-0"
            src="image_url"
          />
        </div>
        <div
          class="col-10 col"
        >
          <div
            class="card-body"
          >
            <div
              class="fw-bold card-title h5"
            >
              Falcon 1
            </div>
            <p
              class="card-text"
            >
              Lorem ipsum onum
            </p>
            <button
              class="btn btn-primary"
              id="1"
              type="button"
            >
              Reserve
            </button>
          </div>
        </div>
      </div>
      <div
        class="g-1 mb-3 row"
      >
        <div
          class="col-2 col"
        >
          <img
            class="img-thumbnail border-0"
            src="image_url"
          />
        </div>
        <div
          class="col-10 col"
        >
          <div
            class="card-body"
          >
            <div
              class="fw-bold card-title h5"
            >
              Falcon 9
            </div>
            <p
              class="card-text"
            >
              Lorem ipsum onum
            </p>
            <button
              class="btn btn-primary"
              id="2"
              type="button"
            >
              Reserve
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Rockets.js: page test Rockets.js: should load  1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mt-5 container-fluid"
      />
    </div>
  </body>,
  "container": <div>
    <div
      class="mt-5 container-fluid"
    />
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Rockets.js: page test Rockets.js: should load  2`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mt-5 container-fluid"
      >
        <div
          class="g-1 mb-3 row"
        >
          <div
            class="col-2 col"
          >
            <img
              class="img-thumbnail border-0"
              src="image_url"
            />
          </div>
          <div
            class="col-10 col"
          >
            <div
              class="card-body"
            >
              <div
                class="fw-bold card-title h5"
              >
                Falcon 1
              </div>
              <p
                class="card-text"
              >
                <span
                  class="me-2 badge bg-info"
                >
                  Reserved
                </span>
                Lorem ipsum onum
              </p>
              <button
                class="btn btn-outline-secondary"
                id="1"
                type="button"
              >
                Cancel
              </button>
            </div>
          </div>
        </div>
        <div
          class="g-1 mb-3 row"
        >
          <div
            class="col-2 col"
          >
            <img
              class="img-thumbnail border-0"
              src="image_url"
            />
          </div>
          <div
            class="col-10 col"
          >
            <div
              class="card-body"
            >
              <div
                class="fw-bold card-title h5"
              >
                Falcon 9
              </div>
              <p
                class="card-text"
              >
                Lorem ipsum onum
              </p>
              <button
                class="btn btn-primary"
                id="2"
                type="button"
              >
                Reserve
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mt-5 container-fluid"
    >
      <div
        class="g-1 mb-3 row"
      >
        <div
          class="col-2 col"
        >
          <img
            class="img-thumbnail border-0"
            src="image_url"
          />
        </div>
        <div
          class="col-10 col"
        >
          <div
            class="card-body"
          >
            <div
              class="fw-bold card-title h5"
            >
              Falcon 1
            </div>
            <p
              class="card-text"
            >
              <span
                class="me-2 badge bg-info"
              >
                Reserved
              </span>
              Lorem ipsum onum
            </p>
            <button
              class="btn btn-outline-secondary"
              id="1"
              type="button"
            >
              Cancel
            </button>
          </div>
        </div>
      </div>
      <div
        class="g-1 mb-3 row"
      >
        <div
          class="col-2 col"
        >
          <img
            class="img-thumbnail border-0"
            src="image_url"
          />
        </div>
        <div
          class="col-10 col"
        >
          <div
            class="card-body"
          >
            <div
              class="fw-bold card-title h5"
            >
              Falcon 9
            </div>
            <p
              class="card-text"
            >
              Lorem ipsum onum
            </p>
            <button
              class="btn btn-primary"
              id="2"
              type="button"
            >
              Reserve
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Rockets.js: page test Rockets.js: should load cancel & book rocket buttons according to reserved value 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mt-5 container-fluid"
      >
        <div
          class="g-1 mb-3 row"
        >
          <div
            class="col-2 col"
          >
            <img
              class="img-thumbnail border-0"
              src="image_url"
            />
          </div>
          <div
            class="col-10 col"
          >
            <div
              class="card-body"
            >
              <div
                class="fw-bold card-title h5"
              >
                Falcon 1
              </div>
              <p
                class="card-text"
              >
                <span
                  class="me-2 badge bg-info"
                >
                  Reserved
                </span>
                Lorem ipsum onum
              </p>
              <button
                class="btn btn-outline-secondary"
                id="1"
                type="button"
              >
                Cancel
              </button>
            </div>
          </div>
        </div>
        <div
          class="g-1 mb-3 row"
        >
          <div
            class="col-2 col"
          >
            <img
              class="img-thumbnail border-0"
              src="image_url"
            />
          </div>
          <div
            class="col-10 col"
          >
            <div
              class="card-body"
            >
              <div
                class="fw-bold card-title h5"
              >
                Falcon 9
              </div>
              <p
                class="card-text"
              >
                Lorem ipsum onum
              </p>
              <button
                class="btn btn-primary"
                id="2"
                type="button"
              >
                Reserve
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mt-5 container-fluid"
    >
      <div
        class="g-1 mb-3 row"
      >
        <div
          class="col-2 col"
        >
          <img
            class="img-thumbnail border-0"
            src="image_url"
          />
        </div>
        <div
          class="col-10 col"
        >
          <div
            class="card-body"
          >
            <div
              class="fw-bold card-title h5"
            >
              Falcon 1
            </div>
            <p
              class="card-text"
            >
              <span
                class="me-2 badge bg-info"
              >
                Reserved
              </span>
              Lorem ipsum onum
            </p>
            <button
              class="btn btn-outline-secondary"
              id="1"
              type="button"
            >
              Cancel
            </button>
          </div>
        </div>
      </div>
      <div
        class="g-1 mb-3 row"
      >
        <div
          class="col-2 col"
        >
          <img
            class="img-thumbnail border-0"
            src="image_url"
          />
        </div>
        <div
          class="col-10 col"
        >
          <div
            class="card-body"
          >
            <div
              class="fw-bold card-title h5"
            >
              Falcon 9
            </div>
            <p
              class="card-text"
            >
              Lorem ipsum onum
            </p>
            <button
              class="btn btn-primary"
              id="2"
              type="button"
            >
              Reserve
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
